--- a/BankSystem/BankSystem.vcxproj.filters
+++ b/BankSystem/BankSystem.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="TransactType.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Common.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
