--- a/BankSystem/BankSystem.vcxproj.filters
+++ b/BankSystem/BankSystem.vcxproj.filters
@@ -65,5 +65,11 @@
     <ClInclude Include="Common.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AccountType.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Serializable.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
