--- a/BankSystem/BankSystem.vcxproj
+++ b/BankSystem/BankSystem.vcxproj
@@ -145,7 +145,9 @@
   <ItemGroup>
     <ClInclude Include="Account.hpp" />
     <ClInclude Include="AccountType.hpp" />
+    <ClInclude Include="App.hpp" />
     <ClInclude Include="Bank.hpp" />
+    <ClInclude Include="BankSystem.hpp" />
     <ClInclude Include="Common.hpp" />
     <ClInclude Include="DateTime.hpp" />
     <ClInclude Include="List.hpp" />
