--- a/BankSystem/BankSystem.vcxproj.filters
+++ b/BankSystem/BankSystem.vcxproj.filters
@@ -71,5 +71,11 @@
     <ClInclude Include="Serializable.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BankSystem.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="App.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
