--- a/BankSystem/BankSystem.vcxproj.filters
+++ b/BankSystem/BankSystem.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="String.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="String.hpp">
